# exfat

./: COPYING  Cargo.toml  README.md
.github/workflows/: cd.yml  ci.yml
src/: cluster.rs  directory.rs  disk.rs  entries.rs  fat.rs  file.rs  image.rs  lib.rs  timestamp.rs
tests/: exfat.img  integration_test.rs
