[package]
name = "exfat"
version = "0.1.0"
description = "Pure Rust implementation of exFAT file system"
repository = "https://github.com/obhq/exfat"
license = "MIT"
edition = "2021"
rust-version = "1.81"

[features]
default = ["std"]
std = []

[dependencies]
byteorder = { version = "1.4", default-features = false }
thiserror = "1.0"
